--- a/src/app/components/main-header/main-header.component.html
+++ b/src/app/components/main-header/main-header.component.html
@@ -1,5 +1,5 @@
 <header [ngClass]="{'lightMode': message, 'lightModeShadow': message}">
-    <h1 [routerLink]="['/countries']" >World Explorer</h1>
+    <h1 [routerLink]="['/countries']" >World Explorer App By Kazi Musharraf</h1>
     <div class="modeSelector">       
         <img [class.lightMode]="lightMode" class="moon" src="../../assets/moon-solid.svg" alt=""   (click) = "toggleMode()" >
        
